
########### next target ###############

set(UTILS_SRCS
	Split.cxx
	Options.cxx
	Format.cxx
	UtilsBase.cxx
	Barrier.cxx
	PropertyTree.cxx    
)


add_library(sodautils STATIC ${UTILS_SRCS})
add_library(sodautils::sodautils ALIAS sodautils)
set_target_properties(sodautils PROPERTIES VERSION ${SoDaUtils_VERSION})
target_link_libraries(sodautils PUBLIC Threads::Threads)

target_include_directories(sodautils
  PUBLIC
  $<BUILD_INTERFACE:${CURRENT_SOURCE_DIR}/include>
  PRIVATE
  $<BUILD_INTERFACE:${CURRENT_SOURCE_DIR}/src>
  INTERFACE
  $<BUILD_INTERFACE:${CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/SoDa>
)

target_sources(sodautils
  PRIVATE
  ${UTILS_SRCS})

set_target_properties(sodautils PROPERTIES
  VERSION ${SoDaUtils_VERSION}
  SOVERSION "${SoDaUtils_VERSION_MAJOR}.${SoDaUtils_VERSION_MINOR}"
  PROJECT_LABEL "SoDaUtils" 
  DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")

message(STATUS "\n\n######## JSON_LIB_DEP [${JSONCPP_LIB_DEP}]\n")
target_link_libraries(sodautils PRIVATE ${JSONCPP_LIB_DEP})
target_include_directories(sodautils PRIVATE ${JSONCPP_INCL_DIR})

if(JSON_IS_EXTERNAL)
  add_dependencies(sodautils jsoncpp-proj)
endif()
  


set(installable_libs sodautils)

install(TARGETS ${installable_libs}
  EXPORT SoDaUtilsTargets
  DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(EXPORT SoDaUtilsTargets FILE SoDaUtilsTargets.cmake 
  NAMESPACE SoDaUtils::
  DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

include(CMakePrintHelpers)

get_target_property(su_props sodautils INTERFACE_LINK_LIBRARIES)
list(REMOVE_ITEM su_props ${JSONCPP_LIB_DEP})
set_target_properties(sodautils PROPERTIES INTERFACE_LINK_LIBRARIES ${su_props})
message(STATUS "*********SoDaUtils interface libraries [${su_props}]")
# where does jsoncpp.a live?
if(0)
set(ALL_PROPERTIES
ABSTRACT
ADDITIONAL_CLEAN_FILES
ADDITIONAL_CLEAN_FILES
ADDITIONAL_MAKE_CLEAN_FILES
ADVANCED
AIX_EXPORT_ALL_SYMBOLS
ALIASED_TARGET
ALIAS_GLOBAL
ALLOW_DUPLICATE_CUSTOM_TARGETS
ANDROID_ANT_ADDITIONAL_OPTIONS
ANDROID_API
ANDROID_API_MIN
ANDROID_ARCH
ANDROID_ASSETS_DIRECTORIES
ANDROID_GUI
ANDROID_JAR_DEPENDENCIES
ANDROID_JAR_DIRECTORIES
ANDROID_JAVA_SOURCE_DIR
ANDROID_NATIVE_LIB_DEPENDENCIES
ANDROID_NATIVE_LIB_DIRECTORIES
ANDROID_PROCESS_MAX
ANDROID_PROGUARD
ANDROID_PROGUARD_CONFIG_PATH
ANDROID_SECURE_PROPS_PATH
ANDROID_SKIP_ANT_STEP
ANDROID_STL_TYPE
ARCHIVE_OUTPUT_DIRECTORY
ARCHIVE_OUTPUT_NAME
ATTACHED_FILES
ATTACHED_FILES_ON_FAIL
AUTOGEN_BETTER_GRAPH_MULTI_CONFIG
AUTOGEN_BUILD_DIR
AUTOGEN_COMMAND_LINE_LENGTH_MAX
AUTOGEN_ORIGIN_DEPENDS
AUTOGEN_PARALLEL
AUTOGEN_SOURCE_GROUP
AUTOGEN_TARGETS_FOLDER
AUTOGEN_TARGET_DEPENDS
AUTOGEN_USE_SYSTEM_INCLUDE
AUTOMOC
AUTOMOC_COMPILER_PREDEFINES
AUTOMOC_DEPEND_FILTERS
AUTOMOC_EXECUTABLE
AUTOMOC_MACRO_NAMES
AUTOMOC_MOC_OPTIONS
AUTOMOC_PATH_PREFIX
AUTOMOC_SOURCE_GROUP
AUTOMOC_TARGETS_FOLDER
AUTORCC
AUTORCC_EXECUTABLE
AUTORCC_OPTIONS
AUTORCC_OPTIONS
AUTORCC_SOURCE_GROUP
AUTOUIC
AUTOUIC_EXECUTABLE
AUTOUIC_OPTIONS
AUTOUIC_OPTIONS
AUTOUIC_SEARCH_PATHS
AUTOUIC_SOURCE_GROUP
BINARY_DIR
BINARY_DIR
BUILDSYSTEM_TARGETS
BUILD_RPATH
BUILD_RPATH_USE_ORIGIN
BUILD_WITH_INSTALL_NAME_DIR
BUILD_WITH_INSTALL_RPATH
BUNDLE
BUNDLE_EXTENSION
CACHE_VARIABLES
CLEAN_NO_CUSTOM
CMAKE_CONFIGURE_DEPENDS
CMAKE_CUDA_KNOWN_FEATURES
CMAKE_CXX_KNOWN_FEATURES
CMAKE_C_KNOWN_FEATURES
CMAKE_HIP_KNOWN_FEATURES
CMAKE_ROLE
COMMON_LANGUAGE_RUNTIME
COMPATIBLE_INTERFACE_BOOL
COMPATIBLE_INTERFACE_NUMBER_MAX
COMPATIBLE_INTERFACE_NUMBER_MIN
COMPATIBLE_INTERFACE_STRING
COMPILE_DEFINITIONS
COMPILE_DEFINITIONS
COMPILE_DEFINITIONS
COMPILE_FEATURES
COMPILE_FLAGS
COMPILE_FLAGS
COMPILE_OPTIONS
COMPILE_OPTIONS
COMPILE_OPTIONS
COMPILE_PDB_NAME
COMPILE_PDB_OUTPUT_DIRECTORY
COMPILE_WARNING_AS_ERROR
COST
CPACK_DESKTOP_SHORTCUTS
CPACK_NEVER_OVERWRITE
CPACK_PERMANENT
CPACK_STARTUP_SHORTCUTS
CPACK_START_MENU_SHORTCUTS
CPACK_WIX_ACL
CROSSCOMPILING_EMULATOR
CUDA_ARCHITECTURES
CUDA_CUBIN_COMPILATION
CUDA_EXTENSIONS
CUDA_FATBIN_COMPILATION
CUDA_OPTIX_COMPILATION
CUDA_PTX_COMPILATION
CUDA_RESOLVE_DEVICE_SYMBOLS
CUDA_RUNTIME_LIBRARY
CUDA_SEPARABLE_COMPILATION
CUDA_STANDARD
CUDA_STANDARD_REQUIRED
CXX_EXTENSIONS
CXX_MODULE_DIRS
CXX_MODULE_SET
CXX_MODULE_SETS
CXX_MODULE_STD
CXX_SCAN_FOR_MODULES
CXX_SCAN_FOR_MODULES
CXX_STANDARD
CXX_STANDARD_REQUIRED
C_EXTENSIONS
C_STANDARD
C_STANDARD_REQUIRED
DEBUG_CONFIGURATIONS
DEBUG_POSTFIX
DEFINE_SYMBOL
DEFINITIONS
DEPENDS
DEPLOYMENT_ADDITIONAL_FILES
DEPLOYMENT_REMOTE_DIRECTORY
DEPRECATION
DISABLED
DISABLED_FEATURES
DISABLE_PRECOMPILE_HEADERS
DLL_NAME_WITH_SOVERSION
DOTNET_SDK
DOTNET_TARGET_FRAMEWORK
DOTNET_TARGET_FRAMEWORK_VERSION
ECLIPSE_EXTRA_CPROJECT_CONTENTS
ECLIPSE_EXTRA_NATURES
ENABLED_FEATURES
ENABLED_LANGUAGES
ENABLE_EXPORTS
ENVIRONMENT
ENVIRONMENT_MODIFICATION
EXCLUDE_FROM_ALL
EXCLUDE_FROM_ALL
EXCLUDE_FROM_DEFAULT_BUILD
EXPORT_COMPILE_COMMANDS
EXPORT_FIND_PACKAGE_NAME
EXPORT_NAME
EXPORT_NO_SYSTEM
EXPORT_PROPERTIES
EXTERNAL_OBJECT
EchoString
FAIL_REGULAR_EXPRESSION
FIND_LIBRARY_USE_LIB32_PATHS
FIND_LIBRARY_USE_LIB64_PATHS
FIND_LIBRARY_USE_LIBX32_PATHS
FIND_LIBRARY_USE_OPENBSD_VERSIONING
FIXTURES_CLEANUP
FIXTURES_REQUIRED
FIXTURES_SETUP
FOLDER
FRAMEWORK
FRAMEWORK_VERSION
Fortran_BUILDING_INSTRINSIC_MODULES
Fortran_FORMAT
Fortran_FORMAT
Fortran_MODULE_DIRECTORY
Fortran_PREPROCESS
Fortran_PREPROCESS
GENERATED
GENERATED_RESOURCE_SPEC_FILE
GENERATOR_FILE_NAME
GENERATOR_IS_MULTI_CONFIG
GHS_INTEGRITY_APP
GHS_NO_SOURCE_GROUP_FILE
GLOBAL_DEPENDS_DEBUG_MODE
GLOBAL_DEPENDS_NO_CYCLES
GNUtoMS
HAS_CXX
HEADER_DIRS
HEADER_FILE_ONLY
HEADER_SET
HEADER_SETS
HELPSTRING
HIP_ARCHITECTURES
HIP_EXTENSIONS
HIP_STANDARD
HIP_STANDARD_REQUIRED
IMPLICIT_DEPENDS_INCLUDE_TRANSFORM
IMPLICIT_DEPENDS_INCLUDE_TRANSFORM
IMPORTED
IMPORTED_COMMON_LANGUAGE_RUNTIME
IMPORTED_CONFIGURATIONS
IMPORTED_CXX_MODULES_COMPILE_DEFINITIONS
IMPORTED_CXX_MODULES_COMPILE_FEATURES
IMPORTED_CXX_MODULES_COMPILE_OPTIONS
IMPORTED_CXX_MODULES_INCLUDE_DIRECTORIES
IMPORTED_CXX_MODULES_LINK_LIBRARIES
IMPORTED_GLOBAL
IMPORTED_IMPLIB
IMPORTED_LIBNAME
IMPORTED_LINK_DEPENDENT_LIBRARIES
IMPORTED_LINK_INTERFACE_LANGUAGES
IMPORTED_LINK_INTERFACE_LIBRARIES
IMPORTED_LINK_INTERFACE_MULTIPLICITY
IMPORTED_LOCATION
IMPORTED_NO_SONAME
IMPORTED_NO_SYSTEM
IMPORTED_OBJECTS
IMPORTED_SONAME
IMPORTED_TARGETS
IMPORT_PREFIX
IMPORT_SUFFIX
INCLUDE_DIRECTORIES
INCLUDE_DIRECTORIES
INCLUDE_DIRECTORIES
INCLUDE_REGULAR_EXPRESSION
INSTALL_NAME_DIR
INSTALL_PARALLEL
INSTALL_REMOVE_ENVIRONMENT_RPATH
INSTALL_RPATH
INSTALL_RPATH_USE_LINK_PATH
INTERFACE_AUTOMOC_MACRO_NAMES
INTERFACE_AUTOUIC_OPTIONS
INTERFACE_COMPILE_DEFINITIONS
INTERFACE_COMPILE_FEATURES
INTERFACE_COMPILE_OPTIONS
INTERFACE_CXX_MODULE_SETS
INTERFACE_HEADER_SETS
INTERFACE_HEADER_SETS_TO_VERIFY
INTERFACE_INCLUDE_DIRECTORIES
INTERFACE_LINK_DEPENDS
INTERFACE_LINK_DIRECTORIES
INTERFACE_LINK_LIBRARIES
INTERFACE_LINK_LIBRARIES_DIRECT
INTERFACE_LINK_LIBRARIES_DIRECT_EXCLUDE
INTERFACE_LINK_OPTIONS
INTERFACE_POSITION_INDEPENDENT_CODE
INTERFACE_PRECOMPILE_HEADERS
INTERFACE_SOURCES
INTERFACE_SYSTEM_INCLUDE_DIRECTORIES
INTERPROCEDURAL_OPTIMIZATION
INTERPROCEDURAL_OPTIMIZATION
IN_TRY_COMPILE
IOS_INSTALL_COMBINED
ISPC_HEADER_DIRECTORY
ISPC_HEADER_SUFFIX
ISPC_INSTRUCTION_SETS
JOB_POOLS
JOB_POOL_COMPILE
JOB_POOL_LINK
JOB_POOL_PRECOMPILE_HEADER
KEEP_EXTENSION
LABELS
LABELS
LABELS
LABELS
LANGUAGE
LIBRARY_OUTPUT_DIRECTORY
LIBRARY_OUTPUT_NAME
LINKER_LANGUAGE
LINKER_TYPE
LINK_DEPENDS
LINK_DEPENDS_NO_SHARED
LINK_DIRECTORIES
LINK_DIRECTORIES
LINK_FLAGS
LINK_INTERFACE_LIBRARIES
LINK_INTERFACE_MULTIPLICITY
LINK_LIBRARIES
LINK_LIBRARIES_ONLY_TARGETS
LINK_LIBRARY_OVERRIDE
LINK_OPTIONS
LINK_OPTIONS
LINK_SEARCH_END_STATIC
LINK_SEARCH_START_STATIC
LINK_WHAT_YOU_USE
LISTFILE_STACK
LOCATION
LOCATION
MACHO_COMPATIBILITY_VERSION
MACHO_CURRENT_VERSION
MACOSX_BUNDLE
MACOSX_BUNDLE_INFO_PLIST
MACOSX_FRAMEWORK_INFO_PLIST
MACOSX_PACKAGE_LOCATION
MACOSX_RPATH
MACROS
MANUALLY_ADDED_DEPENDENCIES
MEASUREMENT
MODIFIED
MSVC_DEBUG_INFORMATION_FORMAT
MSVC_RUNTIME_LIBRARY
NAME
NO_SONAME
NO_SYSTEM_FROM_IMPORTED
OBJCXX_EXTENSIONS
OBJCXX_STANDARD
OBJCXX_STANDARD_REQUIRED
OBJC_EXTENSIONS
OBJC_STANDARD
OBJC_STANDARD_REQUIRED
OBJECT_DEPENDS
OBJECT_OUTPUTS
OPTIMIZE_DEPENDENCIES
OSX_ARCHITECTURES
OUTPUT_NAME
PACKAGES_FOUND
PACKAGES_NOT_FOUND
PARENT_DIRECTORY
PASS_REGULAR_EXPRESSION
PCH_INSTANTIATE_TEMPLATES
PCH_WARN_INVALID
PDB_NAME
PDB_OUTPUT_DIRECTORY
POSITION_INDEPENDENT_CODE
POST_INSTALL_SCRIPT
PRECOMPILE_HEADERS
PRECOMPILE_HEADERS_REUSE_FROM
PREDEFINED_TARGETS_FOLDER
PREFIX
PRE_INSTALL_SCRIPT
PRIVATE_HEADER
PROCESSORS
PROCESSOR_AFFINITY
PROJECT_LABEL
PROPAGATE_TOP_LEVEL_INCLUDES_TO_TRY_COMPILE
PUBLIC_HEADER
REPORT_UNDEFINED_PROPERTIES
REQUIRED_FILES
RESOURCE
RESOURCE_GROUPS
RESOURCE_LOCK
RULE_LAUNCH_COMPILE
RULE_LAUNCH_COMPILE
RULE_LAUNCH_COMPILE
RULE_LAUNCH_CUSTOM
RULE_LAUNCH_CUSTOM
RULE_LAUNCH_CUSTOM
RULE_LAUNCH_LINK
RULE_LAUNCH_LINK
RULE_LAUNCH_LINK
RULE_MESSAGES
RUNTIME_OUTPUT_DIRECTORY
RUNTIME_OUTPUT_NAME
RUN_SERIAL
SKIP_AUTOGEN
SKIP_AUTOMOC
SKIP_AUTORCC
SKIP_AUTOUIC
SKIP_BUILD_RPATH
SKIP_LINTING
SKIP_PRECOMPILE_HEADERS
SKIP_REGULAR_EXPRESSION
SKIP_RETURN_CODE
SKIP_UNITY_BUILD_INCLUSION
SOURCES
SOURCE_DIR
SOURCE_DIR
SOVERSION
STATIC_LIBRARY_FLAGS
STATIC_LIBRARY_OPTIONS
STRINGS
SUBDIRECTORIES
SUFFIX
SYMBOLIC
SYSTEM
SYSTEM
Swift_COMPILATION_MODE
Swift_DEPENDENCIES_FILE
Swift_DEPENDENCIES_FILE
Swift_DIAGNOSTICS_FILE
Swift_LANGUAGE_VERSION
Swift_MODULE_DIRECTORY
Swift_MODULE_NAME
TARGET_ARCHIVES_MAY_BE_SHARED_LIBS
TARGET_MESSAGES
TARGET_SUPPORTS_SHARED_LIBS
TESTS
TEST_INCLUDE_FILE
TEST_INCLUDE_FILES
TEST_LAUNCHER
TIMEOUT
TIMEOUT_AFTER_MATCH
TIMEOUT_SIGNAL_GRACE_PERIOD
TIMEOUT_SIGNAL_NAME
TRANSITIVE_COMPILE_PROPERTIES
TRANSITIVE_LINK_PROPERTIES
TYPE
TYPE
UNITY_BUILD
UNITY_BUILD_BATCH_SIZE
UNITY_BUILD_CODE_AFTER_INCLUDE
UNITY_BUILD_CODE_BEFORE_INCLUDE
UNITY_BUILD_MODE
UNITY_BUILD_UNIQUE_ID
UNITY_GROUP
USE_FOLDERS
VALUE
VARIABLES
VERIFY_INTERFACE_HEADER_SETS
VERSION
VISIBILITY_INLINES_HIDDEN
WATCOM_RUNTIME_LIBRARY
WILL_FAIL
WIN32_EXECUTABLE
WINDOWS_EXPORT_ALL_SYMBOLS
WORKING_DIRECTORY
WRAP_EXCLUDE

  )
cmake_print_properties(
  TARGETS jsoncpp JsonCpp JsonCpp::JsonCpp JsonCpp::jsoncpp jsoncpp_lib jsoncpp_lib_static
  PROPERTIES
  ${ALL_PROPERTIES}
)
endif()

############################################################################
#
# BSD 2-Clause License
# 
# Copyright (c) 2025, kb1vc
# All rights reserved.
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
# 
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
# 
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
# 
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#
############################################################################
